--- a/style/_baza.scss
+++ b/style/_baza.scss
@@ -18,6 +18,8 @@ img {
 .button {
     display: inline-block;
     cursor: pointer;
+    text-decoration: none;
+    color: #000000;
     min-width: 120px;
     text-align: center;
     font-style: normal;
